syntax = "proto3";

package examplepb.v1;

option go_package = "github.com/mikalai-mitsin/example/pkg/examplepb/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

message LikeCreate {
  string post_id = 1;
  string value = 2;
  string user_id = 3;
}

message LikeGet {
  string id = 1;
}

message LikeUpdate {
  string id = 1;
  google.protobuf.StringValue post_id = 2;
  google.protobuf.StringValue value = 3;
  google.protobuf.StringValue user_id = 4;
}

message Like {
  string id = 1;
  google.protobuf.Timestamp updated_at = 2;
  google.protobuf.Timestamp created_at = 3;
  string post_id = 4;
  string value = 5;
  string user_id = 6;
}

message ListLike {
  repeated Like items = 1;
  uint64 count = 2;
}

message LikeDelete {
  string id = 1;
}

message LikeFilter {
  google.protobuf.UInt64Value page_number = 1;
  google.protobuf.UInt64Value page_size = 2;
  repeated string order_by = 3;
}

service LikeService {
  rpc Create(examplepb.v1.LikeCreate) returns (examplepb.v1.Like) {
    option (google.api.http) = {
      post: "/api/v1/likes"
      body: "*"
    };
  }
  rpc Get(examplepb.v1.LikeGet) returns (examplepb.v1.Like) {
    option (google.api.http) = {get: "/api/v1/likes/{id}"};
  }
  rpc Update(examplepb.v1.LikeUpdate) returns (examplepb.v1.Like) {
    option (google.api.http) = {
      patch: "/api/v1/likes/{id}"
      body: "*"
    };
  }
  rpc Delete(examplepb.v1.LikeDelete) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/api/v1/likes/{id}"};
  }
  rpc List(examplepb.v1.LikeFilter) returns (examplepb.v1.ListLike) {
    option (google.api.http) = {get: "/api/v1/likes"};
  }
}